# esp_bno055

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: publish.yml
examples/: detect.rs  get_data.rs
src/: aab.rs  acc_config.rs  bno055.rs  detect.rs  lib.rs  main.rs  regs.rs  std_error.rs
