[package]
name = "esp_bno055"
description = "BNO055 9-axis IMU driver to use esp"
version = "0.1.4"
authors = ["Ryosuke1218 <81555178+Ryosuke1218@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

keywords = [
    "bno055",
    "esp_idf_hal"
]

readme = "README.md"
license-file = "LICENSE"

repository = "https://github.com/kr-work/esp_bno055"
documentation = "https://docs.rs/esp_bno055"

[lib]
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = "0.44.1"
anyhow = "1.0.91"
esp-idf-sys = "0.35.0"
mint = "0.5.9"
byteorder = "1.5.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
bitflags = "2.6.0"

[build-dependencies]
embuild = "0.32.0"

[package.metadata.docs.rs]
all-features = true
